argocd/applications/ofz/playground.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ofz-playground
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: ofz-playground
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ofz-playground
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: ofz-playground
      containers:
        - name: playground
          image: ghcr.io/authzed/spicedb-playground:v0.3.1@sha256:560ef42b8e3ab33c16441e2581c43ca01969c117da309f0108b93e6194641294
          command:
            - nginx
          args:
            - -c
            - /etc/ofz/nginx.conf
            - -g
            - daemon off;
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /index.html
              port: http
          livenessProbe:
            httpGet:
              path: /index.html
              port: http
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: nginx
              mountPath: /etc/ofz
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: nginx
          configMap:
            name: ofz-playground-nginx
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ofz-playground
spec:
  selector:
    app.kubernetes.io/name: ofz-playground
  ports:
    - name: http
      port: 80
      targetPort: http
