argocd/applications/ofz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ofz-playground
  annotations:
    tailscale.com/tags: tag:k8s
spec:
  ingressClassName: tailscale
  rules:
    - host: ofz.ide-newton.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ofz-playground
                port:
                  number: 80
  tls:
    - hosts:
        - ofz.ide-newton.ts.net
